--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@mui/material": "^5.13.6",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "crypto-js": "^4.1.1",
     "formik": "^2.4.2",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
@@ -27,6 +29,7 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.1.1",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
