--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "react-router-dom": "^6.14.0",
     "sweetalert2": "^11.7.12",
     "swiper": "^9.4.1",
+    "uuid": "^9.0.0",
     "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.1.1",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
+    "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react-swc": "^3.0.0",
